# moonlight-harmonyos

./: .gitignore  .gitmodules  LICENSE  README.md  build-profile.json5  oh-package.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: build-profile.json5  oh-package-lock.json5  oh-package.json5
entry/src/: SourceCode.docx
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt
entry/src/main/cpp/libs/curl/: CMakeLists.txt
entry/src/main/cpp/libs/ffmpeg/: Make.sh  build_config.sh
entry/src/main/cpp/libs/openssl/include/openssl/: asn1t.h  cms.h  configuration.h  core_names.h  crypto.h  ess.h  fipskey.h  ocsp.h  pkcs12.h  safestack.h  srp.h  ssl.h  ui.h  x509_vfy.h  x509v3.h
entry/src/main/cpp/libs/sdl/: CMakeLists.txt
entry/src/main/cpp/moonlight-core/: CMakeLists.txt  FragmentShader.h  Shader.cpp  Shader.h  avcodec_vdec_demo.cpp  avcodec_vdec_demo.h  controller_list.h  hello.cpp  http_curl.cpp  http_curl.h  minisdl.c  moon_bridge.cpp  moon_bridge.h  session.cpp  session.h  test.c  testFF.c  x509Utils.cpp  x509Utils.h
entry/src/main/cpp/moonlight-core/audio/: Audio.cpp  Audio.h  AudrenAudioRenderer.cpp  AudrenAudioRenderer.h  DataQueue.cpp  DataQueue.h  IAudioRenderer.h  PcmData.cpp  PcmData.h  SDLAudioRenderer.cpp  SDLAudioRenderer.h
entry/src/main/cpp/moonlight-core/ffmpeg/: Makefile  build_ffmpeg.sh
entry/src/main/cpp/moonlight-core/openssl/include/openssl/: asn1.h  bio.h  cmp.h  conf.h  crmf.h  ct.h  opensslv.h  pkcs7.h  x509.h
entry/src/main/cpp/moonlight-core/utils/: http_curl.cpp  napi_utils.cpp  x509Utils.cpp  x509Utils.h
entry/src/main/cpp/moonlight-core/video/: AVFrameHolder.cpp  AVFrameHolder.h  FFmpegVideoDecoder.cpp  FFmpegVideoDecoder.h  NativeVideoDecoder.cpp  NativeVideoDecoder.h  VideoRender.cpp  VideoRender.h  decode.h
entry/src/main/cpp/moonlight-core/video/common/: common.h
entry/src/main/cpp/moonlight-core/video/decoder/: FFmpegVideoDecoder.h  NativeVideoDecoder.cpp  NativeVideoDecoder.h  decode.h
entry/src/main/cpp/moonlight-core/video/render/: IFFmpegRender.h  eglRender.cpp  eglRender.h  plugin_render.cpp  plugin_render.h
entry/src/main/cpp/types/libcUtils/: index.d.ts  oh-package.json5
entry/src/main/cpp/types/libentry/: index.d.ts
entry/src/main/cpp/types/libutils/: oh-package.json5
entry/src/main/cpp/utils/: CMakeLists.txt  http_curl.cpp  napi_utils.h  utils.cpp  x509Utils.cpp  x509Utils.h
entry/src/main/ets/entryability/: ComputerManagerViewModel.ets  ComputerManagerViewModel.ts  ConnectionContext.ts  ConnetionListener.ts  EntryAbility.ets  EntryAbility.ts  Game.ts  GameViewModel.ets  LimeLog.ts  MoonBridge.ts  NvConnection.ts  PcView.ts  StreamConfiguration.ts
entry/src/main/ets/entryability/computers/: ComputerDatabaseManager.ts  ComputerDetails.ts  ComputerManagerViewModel.ts
entry/src/main/ets/entryability/crypto/: CryptoManager.ts  LimelightCryptoProvider.ts
entry/src/main/ets/entryability/http/: ComputerDetails.ts  Http.ts  NvApp.ts  NvHttp.ts  PairingManager.ts
entry/src/main/ets/entryability/nvstream/: ConnectionContext.ts  ConnetionListener.ts  Game.ts  MoonBridge.ts  NvConnection.ts  PcView.ts  StreamConfiguration.ts
entry/src/main/ets/entryability/viewmodel/: ComputerManagerViewModel.ets  GameViewModel.ets
entry/src/main/ets/pages/: AddPage.ets  AppPage.ets  GamePage.ets  Index.ets  PcPage.ets  PrivacyPage.ets  SettingsPage.ets  VirtualControllerSettings.ets
entry/src/main/ets/pages/compoments/: Loading.ets  Title.ets
entry/src/main/ets/pages/compoments/Preferences/: CommonPreference.ets
entry/src/main/ets/uitls/: CommonEvents.ts  Dialog.ets  ResString.ets  StreamSetttings.ts
entry/src/main/ets/virtual_controller/: AnalogStick.ets  ControllerHandle.ts  ControllerPacket.ts  DigitalButton.ets  DigitalPad.ets  VirtualController.ets  VirtualControllerConfigurationLoader.ets  common.ets
entry/src/main/ets/virtual_controller/context/: GenericControllerContext.ts
entry/src/main/resources/base/element/: color.json  string.json
entry/src/main/resources/base/profile/: main_pages.json
entry/src/main/resources/en_US/element/: string.json
entry/src/main/resources/rawfile/: client.key  client.pem  key.pem  mix.pcm
entry/src/main/resources/zh_CN/element/: string.json
